# shiro

./: CMakeLists.txt  README.md
shiro/: argparse.c  argparse.h  interp.h  lex.c  lex.h  shell.c  shell.h  shiro.c  version.h
